	PR c++/28852 	* cp-tree.h (grok_op_properties): Return bool instead of void. 	* decl.c (grokfndecl): Discard invalid operator declarations. 	(copy_fn_p): Revert change for PR 27547. 	(grok_op_properties): Return error status (true on success). 	* pt.c (tsubst_decl): Discard invalid operator declarations.

* g++.dg/other/operator1.C: Add error-marker.
	* g++.dg/other/operator2.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116463 138bc75d-0d04-0410-961f-82ee72b054a4